add redux, login

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "einvoice",
   "version": "0.0.1",
   "private": true,
+  "proxy": "http://118.69.170.50/API/",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -16,6 +17,7 @@
     "@react-navigation/material-bottom-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "axios": "^0.19.2",
     "native-base": "^2.13.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -26,7 +28,11 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.5",
