--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modalbox": "^2.0.0",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.10.2",
     "react-native-safe-area-context": "^3.1.3",
