--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-modalbox": "^2.0.0",
+    "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.10.2",
     "react-native-safe-area-context": "^3.1.3",
     "react-native-screens": "^2.10.1",
+    "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
