--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "native-base": "^2.13.13",
     "react": "16.13.1",
+    "react-content-loader": "^5.1.0",
     "react-native": "0.63.2",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
+    "react-native-svg": "^12.1.0",
     "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^7.0.0",
     "react-navigation-stack": "^2.8.2",
