--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.4",
+    "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^7.0.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
@@ -37,7 +39,6 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
-    
   },
   "devDependencies": {
     "@babel/core": "7.10.5",
