--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.19.2",
     "native-base": "^2.13.13",
+    "querystring": "^0.2.0",
     "react": "16.13.1",
     "react-content-loader": "^5.1.0",
     "react-native": "0.63.2",
