--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/datetimepicker": "^3.0.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/material-bottom-tabs": "^5.2.16",
@@ -29,7 +30,7 @@
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.6",
+    "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-svg": "^12.1.0",
     "react-native-swipe-list-view": "^3.2.3",
