--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -29,12 +30,14 @@
     "react-native-modals": "^0.19.9",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.6",
+    "react-native-render-html": "^4.2.3",
+    "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-svg": "^12.1.0",
     "react-native-swipe-list-view": "^3.2.3",
     "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^7.0.0",
+    "react-native-webview": "^10.8.2",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
